# forge

./: .ansible-lint  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yaml  pyproject.toml  renovate.json
.clusterfuzzlite/: Dockerfile  build.sh
.docker/forge-github-app-register/: Dockerfile  app.py
.docker/pre-commit/: Dockerfile
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build-forge-github-app-register.yml  build-pre-commit.yml  cflite_build.yml  cflite_pr.yml  dependency-review.yml  docs-pages.yml  iac-policy.yml  infrascan-security-audit.yml  lambda-tests.yml  ministack-smoke.yml  ossf-scorecard.yml  pre-commit.yml  quality-gates.yml  release.yml  semantic-check.yml  zizmor.yml
docs/: architecture.md  forge_splunk_dashboard_analysis.md  index.md  motivation.md  security.md
docs/configurations/: dependency.md  index.md
docs/examples/: index.md
docs/getting-started/: bootstrap.md  configure-helpers.md  configure-infra.md  configure-integrations.md  configure-platform.md  deployment-order.md  first-tenant.md  index.md  minimal-install.md  platform-engineer.md  prerequisites.md  (+1 more)
fuzz/: README.md  job_log_archiver_metadata_fuzzer.py  redrive_deadletter_fuzzer.py  splunk_s3_runner_logs_fuzzer.py  splunk_stuck_dispatcher_fuzzer.py  trust_common_env_fuzzer.py
policy/: README.md
scripts/: ci_summary.py  migrate-tenant.sh  reinstall-eks-with-deps.sh  terragrunt-deps.py  update-checksum.sh  update-terraform-docs.sh
tests/: README.md  conftest.py  pytest.ini  requirements-dev.txt
(+826 files in other folders)
