[project]
name = "forge"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
docs = [
    "mkdocs-material==9.7.6",
]

# Tools baked into the pre-commit Docker image for local system hooks.
pre-commit-image = [
    "pre-commit==4.6.0",
    "bandit==1.9.4",
    "pip-audit==2.10.1",
    "uv==0.11.28",
]

# Runtime deps for .docker/forge-github-app-register.
forge-github-app-register = [
    "Flask==3.1.3",
    "requests==2.34.2",
    "uv==0.11.28",
]

# Dev/test deps for ForgeMT first-party Lambda unit tests.
# Pinned deliberately; CI installs these exact versions. Bump via Renovate like
# the rest of the repo.
lambda-tests = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "moto[all]==5.2.2",
    "boto3==1.43.47",
    "botocore==1.43.47",
    # Runtime libs provided by Klayers in production. Installing them here lets
    # tests import handlers the same way the Lambda runtime does.
    "PyJWT==2.13.0",
    "requests==2.34.2",
    "cryptography==49.0.0",
    "responses==0.26.2",
    "hypothesis==6.158.0",
]

# Dev/test deps for the MiniStack smoke suite under tests/smoke.
# No moto here: these tests point boto3 at the local MiniStack endpoint.
smoke-tests = [
    "pytest==9.1.1",
    "boto3==1.43.47",
    "botocore==1.43.47",
]
